# kubestats

./: .gitignore  README.md  kubectl.py  main.py  output_csv.py  output_json.py  output_table.py  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py  test_kubectl_models.py  test_output_csv.py  test_output_json.py  test_output_table.py
