[project]
name = "kubestats"
version = "0.1.0"
description = "CLI analytics for Kubernetes / OpenShift clusters: CRD adoption, resource limits, GitOps tooling, and Istio service-mesh usage — per namespace."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kubernetes>=29.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.scripts]
analytics = "main:main"

[tool.setuptools]
py-modules = ["main", "kubectl", "output_table", "output_json", "output_csv"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
